--- a/index.html
+++ b/index.html
@@ -1,89 +1,212 @@
 <!DOCTYPE html>
 <html lang="te">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pranavika Green Energy</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background: #f4f9f4;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background: #2d6a4f;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-    h2 {
-      color: #2d6a4f;
-    }
-    .card {
-      background: white;
-      padding: 20px;
-      margin: 20px 0;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    footer {
-      background: #2d6a4f;
-      color: white;
-      text-align: center;
-      padding: 10px;
-      margin-top: 40px;
-    }
-    a {
-      color: #1b4332;
-      text-decoration: none;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pranavika Green Energy</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 50px 20px;
+            text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .under-construction {
+            background-color: #FF5722;
+            padding: 10px 20px;
+            margin: 10px 0;
+            display: inline-block;
+            font-size: 20px;
+            font-weight: bold;
+            color: white;
+            border-radius: 5px;
+        }
+
+        h1 {
+            font-size: 48px;
+            margin: 20px 0;
+            font-weight: 600;
+        }
+
+        p {
+            font-size: 18px;
+            margin: 10px 0;
+        }
+
+        section {
+            padding: 60px 20px;
+            background-color: #ffffff;
+            margin: 20px 0;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        h2, h3 {
+            color: #2d6a4f;
+            margin-bottom: 20px;
+            font-size: 32px;
+            font-weight: 600;
+        }
+
+        ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        ul li {
+            font-size: 18px;
+            margin: 10px 0;
+            line-height: 1.6;
+        }
+
+        .btn-apply {
+            display: inline-block;
+            background-color: #FF5722;
+            color: white;
+            padding: 18px 35px;
+            text-decoration: none;
+            font-size: 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+            margin-top: 30px;
+        }
+
+        .btn-apply:hover {
+            background-color: #d84c1f;
+        }
+
+        footer {
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            font-size: 16px;
+        }
+
+        .highlight {
+            font-weight: bold;
+            color: #FF5722;
+        }
+
+        /* Responsive Styles */
+        @media (max-width: 768px) {
+            header {
+                padding: 30px 10px;
+            }
+
+            h1 {
+                font-size: 36px;
+            }
+
+            section {
+                padding: 40px 15px;
+            }
+
+            h2, h3 {
+                font-size: 28px;
+            }
+
+            .container {
+                padding: 0 10px;
+            }
+
+            .btn-apply {
+                padding: 15px 30px;
+                font-size: 18px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header {
+                padding: 20px 10px;
+            }
+
+            h1 {
+                font-size: 30px;
+            }
+
+            section {
+                padding: 30px 10px;
+            }
+
+            .container {
+                padding: 0;
+            }
+
+            .btn-apply {
+                padding: 12px 25px;
+                font-size: 16px;
+            }
+        }
+    </style>
 </head>
 <body>
 
-  <header>
+<header>
+    <div class="under-construction">Site Under Construction</div>
     <h1>Pranavika Green Energy</h1>
-    <p>Empowering a Sustainable Tomorrow</p>
-  </header>
+    <p>Bringing Clean Energy Solutions for a Sustainable Future</p>
+</header>
 
-  <section>
-    <h2>Customer Phase</h2>
-    <div class="card">
-      <p><strong>Why Solar?</strong> Reduce your electricity bills, get government subsidies, and contribute to a greener planet.</p>
-      <p><strong>Our Solutions:</strong> Residential Rooftop Solar, Commercial Solar Plants, Solar Water Heaters, and more.</p>
-      <p><strong>Benefits:</strong></p>
-      <ul>
-        <li>Up to 80% electricity bill savings</li>
-        <li>25+ years panel warranty</li>
-        <li>Free site visit and consultation</li>
-        <li>Easy EMI options</li>
-      </ul>
+<section>
+    <div class="container">
+        <h2>Why Choose Solar?</h2>
+        <p>Reduce your electricity bills, access government subsidies, and contribute to a greener planet. Solar energy is the way forward.</p>
+
+        <h3>Our Solutions</h3>
+        <ul>
+            <li><strong>Residential Rooftop Solar</strong> - Save more with clean energy at home.</li>
+            <li><strong>Commercial Solar Plants</strong> - Sustainable energy solutions for businesses.</li>
+            <li><strong>And More...</strong> - We offer tailor-made solar solutions for every need.</li>
+        </ul>
+
+        <h3>Benefits of Going Solar</h3>
+        <ul>
+            <li><strong>Up to 90%</strong> electricity bill savings.</li>
+            <li>25+ years panel warranty.</li>
+            <li>Free site visit and consultation.</li>
+            <li>Easy EMI options for smooth payments.</li>
+            <li><strong>40%</strong> subsidy benefits available for customers.</li>
+        </ul>
     </div>
+</section>
 
-    <h2>Business Opportunity</h2>
-    <div class="card">
-      <p><strong>Become a Freelancer or Channel Partner</strong></p>
-      <p>Join hands with Pranavika Green Energy and earn high commissions by promoting solar energy in your region.</p>
-      <p><strong>Opportunities:</strong></p>
-      <ul>
-        <li>No investment required to start as a freelancer</li>
-        <li>Marketing support & training provided</li>
-        <li>Attractive revenue sharing model</li>
-        <li>Channel Partner options for dealers & agencies</li>
-      </ul>
-      <p><a href="mailto:contact@pranavika.com">Apply Now: contact@pranavika.com</a></p>
+<section>
+    <div class="container">
+        <h2>Business Opportunity</h2>
+        <p><strong>Become a Freelancer or Channel Partner with Pranavika Green Energy</strong> and earn attractive commissions by promoting solar energy in your region.</p>
+
+        <h3>Channel Partner Opportunities</h3>
+        <ul>
+            <li>No initial investment required to become a Channel Partner.</li>
+            <li>Comprehensive marketing support and training provided.</li>
+            <li>Attractive revenue-sharing model.</li>
+            <li>Opportunities for dealers and agencies in your location.</li>
+        </ul>
+
+        <a href="tel:9030064832" class="btn-apply">Apply Now: 9030064832</a>
     </div>
-  </section>
+</section>
 
-  <footer>
-    <p>© 2025 Pranavika Green Energy. All rights reserved.</p>
-  </footer>
+<footer>
+    <p>&copy; 2025 Pranavika Green Energy. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
